; ModuleID = '/home/carl/AnghaBench/libgit2/tests/index/extr_add.c_test_index_add__invalid_entries_succeeds_by_default.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/index/extr_add.c_test_index_add__invalid_entries_succeeds_by_default.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@valid_blob_id = common dso_local global i32 0, align 4
@GIT_FILEMODE_BLOB = common dso_local global i32 0, align 4
@GIT_FILEMODE_BLOB_EXECUTABLE = common dso_local global i32 0, align 4
@GIT_FILEMODE_LINK = common dso_local global i32 0, align 4
@invalid_id = common dso_local global i32 0, align 4
@valid_commit_id = common dso_local global i32 0, align 4
@valid_tree_id = common dso_local global i32 0, align 4
@GIT_OPT_ENABLE_STRICT_OBJECT_CREATION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_index_add__invalid_entries_succeeds_by_default() #0 {
  %1 = load i32, i32* @valid_blob_id, align 4
  %2 = load i32, i32* @GIT_FILEMODE_BLOB, align 4
  %3 = call i32 @test_add_entry(i32 1, i32 %1, i32 %2)
  %4 = load i32, i32* @valid_blob_id, align 4
  %5 = load i32, i32* @GIT_FILEMODE_BLOB_EXECUTABLE, align 4
  %6 = call i32 @test_add_entry(i32 1, i32 %4, i32 %5)
  %7 = load i32, i32* @valid_blob_id, align 4
  %8 = load i32, i32* @GIT_FILEMODE_LINK, align 4
  %9 = call i32 @test_add_entry(i32 1, i32 %7, i32 %8)
  %10 = load i32, i32* @invalid_id, align 4
  %11 = load i32, i32* @GIT_FILEMODE_BLOB, align 4
  %12 = call i32 @test_add_entry(i32 0, i32 %10, i32 %11)
  %13 = load i32, i32* @invalid_id, align 4
  %14 = load i32, i32* @GIT_FILEMODE_BLOB_EXECUTABLE, align 4
  %15 = call i32 @test_add_entry(i32 0, i32 %13, i32 %14)
  %16 = load i32, i32* @invalid_id, align 4
  %17 = load i32, i32* @GIT_FILEMODE_LINK, align 4
  %18 = call i32 @test_add_entry(i32 0, i32 %16, i32 %17)
  %19 = load i32, i32* @valid_commit_id, align 4
  %20 = load i32, i32* @GIT_FILEMODE_BLOB, align 4
  %21 = call i32 @test_add_entry(i32 0, i32 %19, i32 %20)
  %22 = load i32, i32* @valid_tree_id, align 4
  %23 = load i32, i32* @GIT_FILEMODE_BLOB_EXECUTABLE, align 4
  %24 = call i32 @test_add_entry(i32 0, i32 %22, i32 %23)
  %25 = load i32, i32* @valid_commit_id, align 4
  %26 = load i32, i32* @GIT_FILEMODE_LINK, align 4
  %27 = call i32 @test_add_entry(i32 0, i32 %25, i32 %26)
  %28 = load i32, i32* @GIT_OPT_ENABLE_STRICT_OBJECT_CREATION, align 4
  %29 = call i32 @git_libgit2_opts(i32 %28, i32 0)
  %30 = call i32 @cl_git_pass(i32 %29)
  %31 = load i32, i32* @valid_blob_id, align 4
  %32 = load i32, i32* @GIT_FILEMODE_BLOB, align 4
  %33 = call i32 @test_add_entry(i32 1, i32 %31, i32 %32)
  %34 = load i32, i32* @valid_blob_id, align 4
  %35 = load i32, i32* @GIT_FILEMODE_BLOB_EXECUTABLE, align 4
  %36 = call i32 @test_add_entry(i32 1, i32 %34, i32 %35)
  %37 = load i32, i32* @valid_blob_id, align 4
  %38 = load i32, i32* @GIT_FILEMODE_LINK, align 4
  %39 = call i32 @test_add_entry(i32 1, i32 %37, i32 %38)
  %40 = load i32, i32* @invalid_id, align 4
  %41 = load i32, i32* @GIT_FILEMODE_BLOB, align 4
  %42 = call i32 @test_add_entry(i32 1, i32 %40, i32 %41)
  %43 = load i32, i32* @invalid_id, align 4
  %44 = load i32, i32* @GIT_FILEMODE_BLOB_EXECUTABLE, align 4
  %45 = call i32 @test_add_entry(i32 1, i32 %43, i32 %44)
  %46 = load i32, i32* @invalid_id, align 4
  %47 = load i32, i32* @GIT_FILEMODE_LINK, align 4
  %48 = call i32 @test_add_entry(i32 1, i32 %46, i32 %47)
  %49 = load i32, i32* @valid_commit_id, align 4
  %50 = load i32, i32* @GIT_FILEMODE_BLOB, align 4
  %51 = call i32 @test_add_entry(i32 1, i32 %49, i32 %50)
  %52 = load i32, i32* @valid_tree_id, align 4
  %53 = load i32, i32* @GIT_FILEMODE_BLOB_EXECUTABLE, align 4
  %54 = call i32 @test_add_entry(i32 1, i32 %52, i32 %53)
  %55 = load i32, i32* @valid_commit_id, align 4
  %56 = load i32, i32* @GIT_FILEMODE_LINK, align 4
  %57 = call i32 @test_add_entry(i32 1, i32 %55, i32 %56)
  ret void
}

declare dso_local i32 @test_add_entry(i32, i32, i32) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_libgit2_opts(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
